container-practice/01_create_network.yaml
AWSTemplateFormatVersion: "2010-09-09"
Resources:
  SbcntrVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: sbcntrVpc

  # インターネットへの通信経路の設定
  SbcntrIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: sbcntr-igw
  AttachSbcntrIGWToVPC:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref SbcntrVPC
      InternetGatewayId: !Ref SbcntrIGW

  # Ingress用の設定
  SbcntrPublicIngressSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SbcntrVPC
      AvailabilityZone: ap-northeast-1a
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Name
          Value: sbcntr-subnet-public-ingress-1a
  SbcntrPublicIngressSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SbcntrVPC
      Tags:
        - Key: Name
          Value: sbcntr-route-table-public-ingress-1a
  SbcntrPublicIngressSubnetRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref SbcntrPublicIngressSubnetRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref SbcntrIGW
  SbcntrPublicIngressSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SbcntrPublicIngressSubnet
      RouteTableId: !Ref SbcntrPublicIngressSubnetRouteTable
  SbcntrPublicIngressSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref SbcntrVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: sbcntr-public-ingress-sg

  # Container用の設定
  SbcntrPrivateContainerSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SbcntrVPC
      AvailabilityZone: ap-northeast-1a
      CidrBlock: 10.0.8.0/24
      Tags:
        - Key: Name
          Value: sbcntr-subnet-private-container-1a
  SbcntrPrivateContainerSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref SbcntrVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
      Tags:
        - Key: Name
          Value: sbcntr-private-container-sg


  # DB用の設定
  SbcntrPrivateDbSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SbcntrVPC
      AvailabilityZone: ap-northeast-1a
      CidrBlock: 10.0.16.0/24
      Tags:
        - Key: Name
          Value: sbcntr-subnet-private-db-1a
  SbcntrPrivateDbSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref SbcntrVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
      Tags:
        - Key: Name
          Value: sbcntr-private-db-sg

  # Management用の設定
  SbcntrPublicManagementSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SbcntrVPC
      AvailabilityZone: ap-northeast-1a
      CidrBlock: 10.0.24.0/24
      Tags:
        - Key: Name
          Value: sbcntr-subnet-public-management-1a
